--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
   "name": "pusher",
   "version": "infowrap2.1.3",
-  "location": "git://github.com/pusher/pusher-js.git",
+  "location": "git://github.com/infowrap/pusher-js.git",
   "description": "Pusher JavaScript library",
   "keywords": ["pusher", "client", "publish", "subscribe", "realtime", "websocket"],
   "licence": "MIT",
